# the-ai-coroner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: alerts.py  history.py  orchestrator.py  scheduler.py
agent/analyzer/: analyzer_agent.py  patterns.py
agent/fetcher/: arize_client.py  fetcher_agent.py
agent/reporter/: reporter_agent.py  templates.py
dashboard/: app.py
dummy_app/: app.py  config.py  questions.py
mcp_server/: server.py  test_client.py
outputs/: autopsy_history.json
